[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project]
name = "blogforge"
version = "0.1.0"
description = "AI-powered multi-agent system that researches, writes, and publishes Jekyll blog posts automatically"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["blog", "jekyll", "ai", "agents", "llm", "automation", "openai", "openrouter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "openai-agents>=0.0.7",
    "tavily-python>=0.5.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]

[project.scripts]
blogforge = "blog_manager.cli:main"
blog-manager = "blog_manager.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "ty>=0.0.1a0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["._*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ty]
python-version = "3.10"
